<resources>
    <string name="app_name">Insight: Movies and Series Search</string>

    <!-- Search screen -->
    <string name="search_screen_title">Search for either a movie or series</string>
    <string name="search_screen_hint_text">Movie or TV Show Title</string>
    <string name="search_screen_button_movie">Search Movie</string>
    <string name="search_screen_button_series">Search Series</string>
    <string name="search_screen_movie_input_empty_error">Please provide a movie title</string>
    <string name="search_screen_series_input_empty_error">Please provide a series title</string>
    <string name="search_results_title">Search Results</string>
    <string name="result_poster">%1$s poster</string>
    <string name="load_state_error_default">There was an error loading the results</string>
    <string name="load_state_retry_button">Retry</string>
    <string name="list_loading_message">Loading…</string>
    <string name="list_loading_error">There was an error fetching the results: %1$s</string>

    <!-- Detail screen -->
    <string name="detail_screen_genre_heading">Genre</string>
    <string name="detail_screen_rated_heading">Rated</string>
    <string name="detail_screen_rating_heading">Rating</string>
    <string name="detail_screen_rating">%1$s/10</string>
</resources>