<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ahmedtikiwa.insight.ui.search.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_standard"
            android:layout_marginEnd="@dimen/margin_horizontal_standard"
            android:padding="@dimen/padding_standard_double"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_screen_hint_text"
                android:padding="@dimen/padding_standard_double" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_movie_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_standard"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onMovieSearchClick()}"
            android:text="@string/search_screen_button_movie"
            app:layout_constraintEnd_toStartOf="@id/button_series_search"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textinput_search" />

        <Button
            android:id="@+id/button_series_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_standard"
            android:layout_marginEnd="@dimen/margin_horizontal_standard"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onSeriesSearchClick()}"
            android:text="@string/search_screen_button_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/button_movie_search"
            app:layout_constraintTop_toBottomOf="@id/textinput_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>